# djinni-salary-back

./: .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  proxy.txt  pyproject.toml  stub.env
.github/workflows/: build-deploy-main.yml  build-main.yml
alembic/: env.py
alembic/versions/: 13b013c1e332_updated_defaults_for_salaries.py  18018e7dcda0_init_schema.py  534539fae831_added_salary_dt_field.py  7f1dc44f2d6c_removed_unused_models.py  99c466780993_init.py
app/: database.py  logging_config.py  main.py  models.py  schemas.py  settings.py  utils.py
app/crud/: salary.py
app/routers/: salary.py
app/scrapers/: djinni.py  exceptions.py  network.py  session_pool.py
app/services/: salary.py
app/staticfiles/: privacy.html
config/: server.conf
tests/: test_parse.py
tests/html_pages/: case_1.html  case_2_1.html  case_2_2.html  case_2_3.html  case_2_4.html  case_2_5.html
