[project]
name = "djinni-salary-back"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.13.1",
    "alembic>=1.17.0",
    "beautifulsoup4>=4.14.2",
    "fastapi>=0.119.0",
    "lxml>=6.0.2",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.3",
    "pytest>=8.4.2",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "sentry-sdk[fastapi]>=2.45.0",
    "sqlalchemy>=2.0.44",
    "uvicorn>=0.37.0",
]
